# panda-monopoly

./: .gitignore  Anchor.toml  PHASE2_PROPERTIES_COMPLETE.md  README.md  bankruptcy.rs  build-local.sh  calculate_discriminators.js  create-placeholder-sounds.js  notes.md  pnpm-lock.yaml  prompt.txt  prompt2.txt  run.sh  start-validator.sh
app/: layout.tsx  page.tsx
components/: board-spaces.tsx  card-draw-modal.tsx  corner-spaces.tsx  dice.tsx  game-manager.tsx  left-sidebar.tsx  monopoly-board.tsx  player-tokens.tsx  property-building-dialog.tsx  property-details-dialog.tsx  property-dialog.tsx  property-indicators.tsx  right-panel.tsx
data/: monopoly-data.ts
hooks/: index.ts  types.ts  useGameActions.ts  useGameManager.ts  useGameState.ts  useGameUtils.ts
indexer/: drizzle.config.ts  eslint.config.mts  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
mobile/: README.md  UI-IMPROVEMENTS.md  app.json  global.css  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
panda-pet-mobile/: FLOW_DIAGRAM.md  GAME_FLOW_DOCUMENTATION.md  README.md  app.json  global.css  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
programs/panda-monopoly/: Cargo.toml
programs/panda-monopoly/src/: constants.rs  error.rs  legacy.rs  lib.rs  utils.rs
programs/panda-monopoly/src/instructions/: auction.rs  bankruptcy.rs  cancel_game.rs  claim_reward.rs  dice.rs  end_game.rs  end_turn.rs  initialize.rs  jail.rs  leave_game.rs  mod.rs  movement.rs  permissionless.rs  platform.rs  property.rs  special_spaces.rs  test.rs  trading.rs
programs/panda-monopoly/src/state/: events.rs  mod.rs
programs/v2/: .gitignore  Cargo.toml  IMPLEMENTATION_GUIDE.md  MIGRATION.md  PHASE1_COMPLETE.md  README.md  STATUS.md
programs/v2/src/: constants.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
styles/: globals.css  monopoly.css
tests/: end-turn.test.ts  hello.test.ts  (+8 more)
web/: dum  (+7 more)
(+355 files in other folders)
