[package]
name = "panda-monopoly"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "panda_monopoly"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = "0.31.0"
ephemeral-rollups-sdk = { version = "0.2.5", features = ["anchor"] }
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }

