[package]
name = "panda-monopoly-v2"
version = "0.1.0"
description = "Panda Monopoly reimplemented with Pinocchio"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "panda_monopoly_v2"

[features]
default = []
bpf-entrypoint = []
no-entrypoint = []

[dependencies]
pinocchio = "0.7.0"
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
